--- a/proyectoweb/nomina/plantillas/inicio.html
+++ b/proyectoweb/nomina/plantillas/inicio.html
@@ -1,1 +1,43 @@
+{% load static %}
+<!DOCTYPE html>
+<html lang="es">
+  <!-- Informacion de la pagina para los navegadores -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/header.css' %}">
+    {% block css %} {% endblock %}
+    <title> {% block titulo %} Nomina {% endblock %}  </title>
 
+  </head>
+  <!-- contenido de la pagina que ven lo usuarios -->
+  <body>
+    <!--* encabezado(logo-menu-titulo) del sitio -->
+    <header class="header">
+      <nav class="navegacion">
+        <a href="{% url 'inicio' %}" class="logo">
+          <img src="{% static 'img/logo.jpg' %}" width="50px" alt="logo">
+          <div class="logo">
+              Rol de Pagos
+          </div>
+        </a>
+        <ul class="menu">
+          <li><a href="{% url 'inicio' %}">INICIO</a></li>
+          <li><a href="{% url 'cargo' %}">CARGOS</a></li>
+          <li><a href="{% url 'departamento' %}">DEPARTAMENTOS</a></li>
+          <li><a href="{% url 'empleado' %}">EMPLEADOS</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      {% block contenido %}
+        <section class ="principal">
+            <h1>BIENVENIDO A MI SITIO WEB</h1>
+            <img width="900px" src="{% static 'img/diseño.png' %}" alt="Sin imagen" />
+        </section>
+      {% endblock %}
+    </main>
+  </body>
+</html>
